--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node ./server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +13,8 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "@types/node": "^22.8.6"
   }
 }
