--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "clientserver",
   "version": "1.0.0",
   "description": "",
-  "main": "client.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./server.js"
+    "start": "node /usr/src/app/app/server/server.js",
+    "test": "node ./app/server/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "formidable": "^3.5.2",
+    "mongodb": "^6.12.0",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^22.8.6"
   }
 }
