--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "formidable": "^3.5.2",
     "mongodb": "^6.12.0",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/formidable": "^3.4.5",
-    "@types/node": "^22.8.6"
+    "@types/node": "^22.8.6",
+    "typescript": "^5.7.3"
   }
 }
