--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.21.2",
     "formidable": "^3.5.2",
     "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
+    "mongose": "^0.0.2-security",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
